GetFileOK
