# BUILD/SOURCES/config/swagger.json
@@ -239,75 +239,39 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success response",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object",
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "default": "Simple Page layout Template 1"
-                                    },
-                                    "description": {
-                                        "type": "string",
-                                        "default": "Simple Page layout Template 1"
-                                    },
-                                    "icon": {
-                                        "type": "string",
-                                        "default": "layout1.png"
-                                    },
-                                    "category": {
-                                        "type": "string",
-                                        "default": "Template"
-                                    },
-                                    "subcategory": {
-                                        "type": "string",
-                                        "default": ""
-                                    },
-                                    "tags": {
-                                        "type": "array",
-                                        "items": {}
-                                    },
-                                    "date": {
-                                        "type": "string",
-                                        "default": "10/10/2017"
-                                    },
-                                    "author": {
-                                        "type": "string",
-                                        "default": "NamOs"
-                                    },
-                                    "version": {
-                                        "type": "string",
-                                        "default": "1.0"
-                                    },
-                                    "imageDesc": {
-                                        "type": "string",
-                                        "default": "layout1.png"
-                                    },
-                                    "implementationType": {
-                                        "type": "string",
-                                        "default": "PYTHON"
-                                    },
-                                    "like": {
-                                        "type": "integer",
-                                        "default": 1
-                                    },
-                                    "implementationFile": {
-                                        "type": "string",
-                                        "default": "http://localhost:8888/spotfireFramework/customLibs/ironPythonLib/templateLayout1.py"
-                                    }
-                                }
-                            }
-                        }
+                        "description": "Success response"
                     }
                 },
-                "parameters": [],
-                "operationId": "getGetAssetFile",
-                "summary": "Get Asset File Summary",
-                "description": "Get Asset File Description"
+                "parameters": [
+                    {
+                        "name": "caseRef",
+                        "in": "query",
+                        "description": "",
+                        "required": false,
+                        "type": "string",
+                        "format": ""
+                    },
+                    {
+                        "name": "sandBox",
+                        "in": "query",
+                        "description": "",
+                        "required": false,
+                        "type": "string",
+                        "format": ""
+                    },
+                    {
+                        "name": "fileName",
+                        "in": "query",
+                        "description": "",
+                        "required": false,
+                        "type": "string",
+                        "format": ""
+                    }
+                ],
+                "operationId": "getGetAssetFile"
             }
         }
+    
     },
     "definitions": {
         "GiveNewSchemaNameHere": {
